# umba-msvc-filters

./: .gitignore  .msvc-filters.options  CMakeLists.txt  README.md  _build_all_msvc2019.bat  _build_all_msvc2022.bat  _cmake_generate_msvc2019.bat  _cmake_generate_msvc2022.bat  _start_msvc2019_x64.bat  _start_msvc2019_x86.bat  _start_msvc2022_x64.bat  _start_msvc2022_x86.bat  umba-msvc-filters-msvc2019.sln  ~call_cmake_msvc_impl.bat
.cmake/: umba.cmake
.msvc/: umba_3dp_nlohman.props
.msvc2019/: readme.txt  umba-msvc-filters.vcxproj
_libs/: .gitignore  _clone_libs.bat  _git-job-impl.bat
_libs/pugixml/: pugiconfig.hpp
doc/: links.txt  musles.txt
src/umba-msvc-filters/: app_config.h  app_ver_config.h  arg_parser.h  msvc_project.h  msvc_sln.h  umba-msvc-filters.cpp  utils.h
